# clap-serde

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: app_keys.md  arg_groups.md  arg_keys.md
src/: app_de.rs  arg_de.rs  de.rs  documents.rs  lib.rs  tests.rs  util.rs  x.rs  yaml.rs
src/de/: app.rs  appsettings.rs  arg.rs  argsetting.rs  group.rs  macros.rs  mod.rs
src/de/app/: appsettings.rs  color.rs  mod.rs
src/de/arg/: arg_action.rs  mod.rs  value_hint.rs  value_parser.rs
src/se/: app.rs  command.rs  macros.rs  mod.rs
src/ser/: app.rs  arg.rs  macros.rs  mod.rs
