[package]
name = "clap-serde"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Provides a wrapper to deserialize clap app using serde."
repository = "https://github.com/aobatact/clap-serde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
env = [ "clap/env" ]

[dependencies]
clap = { version = "3.0", default-features = false, features = ["std"]}
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
serde_yaml = { version = "0.8.23" }
serde_json = { version = "1.0.75" }
toml = { version = "0.5.8" }
