[package]
name = "clap-serde"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Provides a wrapper to deserialize clap app using serde."
repository = "https://github.com/aobatact/clap-serde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "kebab-case-setting", "yaml" ]
env = [ "clap/env" ]
kebab-case-setting = []
snake-case-setting = []
yaml = [ "yaml-rust"]

[dependencies]
clap = { version = "3.0", default-features = false, features = ["std"]}
serde = { version = "1", features = ["derive"]}
yaml-rust = { version = "0.4.5", default-features = false, optional = true }

[dev-dependencies]
serde_json = { version = "1.0.75" }
toml = { version = "0.5.8" }
